--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Capture</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1></h1>
+      <div class="select">
+        <p>Select your Frame!</p>
+      </div>
+    </div>
+  </body>
 </html>
